--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "net-snmp": "^3.25.2"
+    "net-snmp": "^3.25.2",
+    "sqlite3": "^5.1.7"
   }
 }
